<?xml version="1.0" encoding="utf-8"?>
<restrictions xmlns:android="http://schemas.android.com/apk/res/android">

    <restriction
        android:key="settings_password"
        android:title="@string/settings_password_title"
        android:restrictionType="string"
        android:description="@string/settings_password_desc"
        android:defaultValue="admin123" />

    <restriction
        android:key="connection_secret"
        android:title="@string/connection_secret_title"
        android:restrictionType="string"
        android:description="@string/connection_secret_desc"
        android:defaultValue="3757" />

    <restriction
        android:key="tracking_server_url"
        android:title="@string/tracking_server_url_title"
        android:restrictionType="string"
        android:description="@string/tracking_server_url_desc"
        android:defaultValue="https://example.com/track" />

    <restriction
        android:key="tracking_interval"
        android:title="@string/tracking_interval_title"
        android:restrictionType="integer"
        android:description="@string/tracking_interval_desc"
        android:defaultValue="15" />

</restrictions>